css: fix custom id padding causing issues in alignement
and remove now useless custom-id-badge rule

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1440,11 +1440,6 @@ input[type='color'] {
   }
 }
 
-.custom-id-badge {
-  color: $medium;
-  padding: 0.25rem;
-}
-
 .increased-spacing {
   letter-spacing: 0.1rem;
 }
